client/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: tayu78/client
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
