client/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: myapp
  name: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myapp
    spec:
      containers:
        - image: docker.io/tayu78/typing-minikube
          name: myapp
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 3000
status: {}
