client/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: client
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 31000
  selector:
    app: client
