client/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: typing-app.com
      http:
        paths:
          - path: /
            backend:
              serviceName: myapp
              servicePort: 3000
